--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,12 @@ matplotlib>=3.7.0
 seaborn>=0.12.0
 scikit-learn>=1.3.0
 
+# Web API Framework
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+python-multipart>=0.0.6
+pydantic>=2.5.0
+
 # Jupyter & Notebooks
 jupyter>=1.0.0
 jupyterlab>=4.0.0
