Implement face recognition system with multiple embedding backends
- Added face embedding backends: Dlib, MobileNetV2, TFLite, OpenCV DNN.
- Created base class for embedding backends with methods for extraction and comparison.
- Developed FaceRecognizer class to handle face detection, embedding extraction, and recognition.
- Implemented registration of faces from images and directories.
- Added utility functions for face image processing, including cropping, alignment, and quality assessment.
- Introduced types for recognition results and face categories.
- Integrated logging for better traceability of operations and errors.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,15 +8,17 @@
 
 services:
   app:
-    build: .
+    build:
+      context: ..
+      dockerfile: docker/Dockerfile
     image: iot-home-security:latest
     container_name: home-security
     
     volumes:
-      - ./src:/app/src:ro
-      - ./config:/app/config:ro
-      - ./data:/app/data
-      - ./logs:/app/logs
+      - ../src:/app/src:ro
+      - ../config:/app/config:ro
+      - ../data:/app/data
+      - ../logs:/app/logs
     
     ports:
       - "8000:8000"
@@ -44,14 +46,14 @@ services:
     devices:
       - /dev/video0:/dev/video0
     volumes:
-      - ./src:/app/src:ro
-      - ./config:/app/config:ro
-      - ./data:/app/data
+      - ../src:/app/src:ro
+      - ../config:/app/config:ro
+      - ../data:/app/data
       - /tmp/.X11-unix:/tmp/.X11-unix:ro
     environment:
       - PYTHONUNBUFFERED=1
       - DISPLAY=${DISPLAY:-:0}
     network_mode: host
     ports: []
-    command: ["python", "-m", "src.cli", "detect", "--camera"]
+    command: ["python", "-m", "src.face", "detect", "--camera"]
     restart: "no"
