feat: enhance face recognition module with auto-detection of watch list directory and save functionality for captured frames

--- a/.gitignore
+++ b/.gitignore
@@ -131,6 +131,7 @@ data/raw/faces/uploads/**/*
 !data/raw/faces/.gitkeep
 !data/raw/faces/watch_list/.gitkeep
 !data/raw/faces/README.md
+captures/
 
 # Processed data - İSTİSNALAR EKLENDİ
 data/processed/*
